--- a/services/deviceRegistry/src/main/resources/templates/registryDashboard.html
+++ b/services/deviceRegistry/src/main/resources/templates/registryDashboard.html
@@ -1,15 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>TEST DASHBOARD</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DevReg HAS</title>
+
+    <link data-th-href="@{/webjars/bulma/0.9.3/css/bulma.css}" rel="stylesheet">
+    <link rel="stylesheet" data-th-href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"/>
+    <script data-th-src="@{/webjars/timeago.js/4.0.2/dist/timeago.js}"></script>
 </head>
 <body>
-    <section>
-        <div class="mb-3">
-            <label class="container">Output HTML</label>
-            <div th:utext="${htmlContent}"></div>
+    <section class="hero is-link is-bold">
+        <!-- Hero head: will stick at the top -->
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a class="navbar-item">
+                            <img src="/images/logo.png" alt="Logo">
+                        </a>
+                        <span class="navbar-burger" data-target="navbarMenuHeroA">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+                    </div>
+                    <div id="navbarMenuHeroA" class="navbar-menu">
+                        <div class="navbar-end">
+                            <a class="navbar-item is-active">
+                                Home
+                            </a>
+                            <a class="navbar-item">
+                                Examples
+                            </a>
+                            <a class="navbar-item">
+                                Documentation
+                            </a>
+                            <span class="navbar-item">
+              <a class="button is-primary is-inverted">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title">
+                    <i class="fa fa-github-square" aria-hidden="true"></i>&nbsp;Device Registry
+                </h1>
+                <h1 class="subtitle">
+                    <i class="fa" aria-hidden="true"></i>&nbsp;Home Automation System
+                </h1>
+            </div>
         </div>
     </section>
+
+    <section class="hero is-info is-dark">
+        <!-- Hero content: will be in the middle -->
+        <div class="hero-body is-primary">
+            <section>
+                <div class="hero-body is-dark">
+                    <label class="container"></label>
+                    <div class="is-dark" th:utext="${htmlContent}"></div>
+                </div>
+            </section>
+        </div>
+
+        <!-- Hero footer: will stick at the bottom -->
+        <div class="hero-foot">
+            <nav class="tabs">
+                <div class="container">
+                    <ul>
+                        <li class="is-active"><a>Overview</a></li>
+                        <li><a>Modifiers</a></li>
+                        <li><a>Grid</a></li>
+                        <li><a>Elements</a></li>
+                        <li><a>Components</a></li>
+                        <li><a>Layout</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </section>
+
 </body>
 </html>
