link to h2 console and expose actuator endpoints

--- a/services/deviceRegistry/src/main/resources/templates/registryDashboard.html
+++ b/services/deviceRegistry/src/main/resources/templates/registryDashboard.html
@@ -38,11 +38,11 @@
                                 Documentation
                             </a>
                             <span class="navbar-item">
-              <a class="button is-primary is-inverted">
+              <a href="http://localhost:8080/h2-console" class="button is-primary is-inverted">
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                <span>Download</span>
+                <span>H2-Console</span>
               </a>
             </span>
                         </div>
@@ -74,7 +74,9 @@
 
                         Navigate using the navbar at the top of the screen: <br>
                         <ul>
-                            * Documentation - Read through the API Specs
+                            <li>Documentation - Read through the API Specs</li>
+                            <li>Actuator - Links to system level metrics</li>
+                            <li>H2-Console - navigate to H2-Console: Password Protected</li>
                         </ul>
                     </div>
                 </div>
