--- a/services/deviceRegistry/src/main/resources/templates/registryDocumentation.html
+++ b/services/deviceRegistry/src/main/resources/templates/registryDocumentation.html
@@ -38,11 +38,11 @@
                                 Documentation
                             </a>
                             <span class="navbar-item">
-              <a class="button is-primary is-inverted">
+              <a href="http://localhost:8080/h2-console" class="button is-primary is-inverted">
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                <span>Download</span>
+                <span>H2-Console</span>
               </a>
             </span>
                         </div>
